--- a/2_sem/README
+++ b/2_sem/README
@@ -1,1 +1,1 @@
-\bCodes from the 2nd semester in the discipline "Object-oriented programming"\b
+Codes from the 2nd semester in the discipline "Object-oriented programming"
